--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,7 @@
-amazon-linux-extras==1.3.1
-aws-cfn-bootstrap==1.4
-awscli==1.14.8
-Babel==0.9.6
-backports.ssl-match-hostname==3.4.0.2
-botocore==1.8.12
-chardet==2.2.1
-cloud-init==0.7.9
-colorama==0.3.2
-configobj==4.7.2
-docopt==0.6.2
-docutils==0.12
-futures==3.0.5
+backports.ssl-match-hostname==3.5.0.1
+bintrees==2.0.7
+gdax==1.0.6
 geminipy==0.0.3
-iniparse==0.4
-IPy==0.75
-jedi==0.11.1
-Jinja2==2.7.2
-jmespath==0.9.3
-jsonpatch==1.2
-jsonpointer==1.9
-kitchen==1.1.1
-langtable==0.0.31
-lockfile==0.9.1
-MarkupSafe==0.11
-parso==0.1.1
-Pillow==2.0.0
-policycoreutils-default-encoding==0.1
-prettytable==0.7.2
-prompt-toolkit==1.0.15
-ptpython==0.41
-pyasn1==0.1.9
-pycurl==7.19.0
-Pygments==2.2.0
-pygpgme==0.3
-pyliblzma==0.5.3
-pyserial==2.6
-pystache==0.5.3
-python-daemon==1.6
-python-dateutil==2.6.0
-pyxattr==0.5.1
-PyYAML==3.10
-requests==2.6.0
-rsa==3.4.1
-s3transfer==0.1.12
-seobject==0.1
-sepolicy==1.1
-simplejson==3.2.0
-six==1.9.0
-urlgrabber==3.10
-urllib3==1.10.2
-wcwidth==0.1.7
-yum-langpacks==0.4.2
-yum-metadata-parser==1.1.4
+requests==2.13.0
+six==1.10.0
+websocket-client==0.40.0
